<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar_color"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/llLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/White"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- Header Starts -->

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip">

                    <ImageView
                        android:id="@+id/logo_id"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ju_logo" />


                </LinearLayout>

                <!-- Header Ends -->

                <!-- Login Form -->

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/header"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txtErrorMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dip" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtUserId"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/user_icon"
                            android:drawablePadding="10dp"
                            android:drawableTint="#FF4081"
                            android:hint="@string/use_id_hint"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/myTextPrimaryColor"
                            android:textColorHint="@color/myTextPrimaryColor" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#000000">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:paddingLeft="8dp"
                            android:singleLine="true"
                            android:text="123456"
                            android:textColor="@color/myTextPrimaryColor"
                            android:textColorHint="@color/myTextPrimaryColor" />
                    </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="-6dp"
                    android:checked="false"
                    android:text="@string/Remember_me"
                    android:textColor="@color/myTextSecondaryColor"
                    android:textSize="14sp"
                    />

                <!-- Link to forgot pass  -->

                <TextView
                    android:id="@+id/txtForgotPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_password_link"
                    android:textSize="14sp"
                    android:gravity="right"
                    android:textColor="@color/myTextPrimaryColor"
                    />



            </LinearLayout>




                    <!-- Login button -->



                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="@string/btn_login"
                       />



                    <!-- Link to Registration Screen -->
                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:padding="5dp"
                        android:text="@string/sign_up_link"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:textColor="@color/accentColor"
                        />

                </LinearLayout>
                <!-- Login Form Ends -->

                <!-- version no added -->
                <TextView
                    android:id="@+id/versionInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Version Text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>